prevent select dropdown from getting clipped by parents

--- a/src/pages/tools/queryrules/QueryRules.css
+++ b/src/pages/tools/queryrules/QueryRules.css
@@ -46,7 +46,7 @@
   display: flex;
 }
 
-select {
+.widget--widget > select {
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
@@ -54,23 +54,32 @@ select {
   padding: 2px 4px;
 }
 
-select[multiple] {
-  width: 270px;
+.widget--widget > select[multiple] {
+  width: 220px;
   height: 24px;
   display: inline-flex;
   position: absolute;
   top: -12px;
 }
 
-select[multiple]:hover {
+.widget--widget > select[multiple]:hover {
   height: min-content;
   z-index: 200;
 }
 
-select:-internal-list-box option:checked {
+.widget--widget > input[type="number"] {
+  width: 75px;
+}
+
+.rule--widget--MULTISELECT > .widget--widget {
+  position: relative;
+  width: 220px;
+}
+
+/* select:-internal-list-box option:checked {
   background-color: rgb(137 193 252 / 0.5) !important;
   color: rgb(16, 16, 16) !important;
-}
+} */
 
 .group--actions > button {
   margin: 0.2rem !important;
@@ -153,14 +162,6 @@ pre {
   align-self: center;
 }
 
-.widget--widget > input[type="number"] {
-  width: 75px;
-}
-
-.widget--widget {
-  position: relative;
-}
-
 .group {
   background: rgb(0 119 200 / 0.1);
   border: 1px solid #6a8eb3;
@@ -216,6 +217,7 @@ pre {
 
 .query-builder {
   margin-top: -10px;
+  overflow: inherit;
 }
 
 .group--conjunctions > input[type="checkbox"],
